# claude-swap

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: config.yaml
src/cbridge/: __main__.py  cli.py  shim.py
src/cbridge/data/: __init__.py
src/claude_swap/: __init__.py  __main__.py  cli.py  shim.py
src/claude_swap/data/: __init__.py
src/kimicc/: __main__.py  cli.py  shim.py
src/kimicc/data/: __init__.py  litellm.yaml
tests/: test-tools-api.sh  test_continuation.py  test_multistep.py  test_shim_auto_retry.py
tests/unit/: test_ci.py  test_cli.py  test_docs.py  test_packaging.py  test_shim_web_search_metadata.py  test_wheel_smoke.py
