[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kimicc"
version = "0.1.0"
description = "A bridge to use Claude Code CLI with Kimi K2.5 via AWS Bedrock"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.25.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.scripts]
kimicc = "kimicc.cli:main"

[project.urls]
Homepage = "https://github.com/alonb/kimicc"
Repository = "https://github.com/alonb/kimicc"
Issues = "https://github.com/alonb/kimicc/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kimicc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
