[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cbridge"
dynamic = ["version"]
description = "A bridge to use Claude Code CLI with Kimi K2.5 via AWS Bedrock"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Alon Bochman"},
]
keywords = ["claude-code", "kimi", "bedrock", "litellm", "shim"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.118,<1.0",
    "httpx>=0.27,<1.0",
    "litellm>=1.60,<2.0",
    "platformdirs>=4.0,<5.0",
    "PyYAML>=6.0,<7.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0,<10.0",
    "pytest-asyncio>=1.0,<2.0",
    "httpx>=0.27,<1.0",
]
dev = [
    "build>=1.2,<2.0",
    "mypy>=1.15,<2.0",
    "ruff>=0.11,<1.0",
    "twine>=6.1,<7.0",
    "types-PyYAML>=6.0,<7.0",
]

[project.scripts]
cbridge = "cbridge.cli:main"

[project.urls]
Homepage = "https://github.com/jswift24/cbridge"
Repository = "https://github.com/jswift24/cbridge"
Issues = "https://github.com/jswift24/cbridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["cbridge"]
only-include = ["src/cbridge"]
force-include = { "src/cbridge/data/litellm.yaml" = "cbridge/data/litellm.yaml" }

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "src/cbridge/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.hatch.version]
path = "src/cbridge/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff.lint.per-file-ignores]
"tests/test_multistep.py" = ["F541"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
